--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /test/dummy/db/*.sqlite3
 /test/dummy/db/*.sqlite3-*
 /test/dummy/log/*.log
+/test/dummy/log/*.log.*
 /test/dummy/storage/
 /test/dummy/tmp/
 node_modules/
